<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.polije.sosrobahufactoryapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pesanan"
        android:name="com.polije.sosrobahufactoryapp.ui.pesanan.PesananFragment"
        android:label="@string/title_pesanan"
        tools:layout="@layout/fragment_pesanan" />

    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.polije.sosrobahufactoryapp.ui.riwayatRestok.RiwayatFragment"
        android:label="@string/title_riwayatStok"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/navigation_harga"
        android:name="com.polije.sosrobahufactoryapp.ui.hargaProduk.HargaProdukFragment"
        android:label="@string/title_harga"
        tools:layout="@layout/fragment_harga_produk" />

    <fragment
        android:id="@+id/navigation_pengaturan"
        android:name="com.polije.sosrobahufactoryapp.ui.pengaturan.PengaturanFragment"
        android:label="@string/title_pengaturan"
        tools:layout="@layout/fragment_pengaturan" />

</navigation>