<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNamaRokok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_rokok"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvHargaSatuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_satuan" />

        <TextView
            android:id="@+id/tvJumlahItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_item" />

        <TextView
            android:id="@+id/tvJumlahHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_harga" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
