<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/factory_dashboard_graph"
    app:startDestination="@id/navigation_home_pabrik">

    <fragment
        android:id="@+id/navigation_home_pabrik"
        android:name="com.polije.sosrobahufactoryapp.ui.factory.home.HomePabrikFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.polije.sosrobahufactoryapp.ui.factory.riwayatRestok.RiwayatPabrikFragment"
        android:label="@string/title_riwayatStok"
        tools:layout="@layout/fragment_riwayat" />
    <fragment
        android:id="@+id/navigation_pesanan"
        android:name="com.polije.sosrobahufactoryapp.ui.factory.pesanan.PesananPabrikFragment"
        android:label="@string/title_pesanan"
        tools:layout="@layout/fragment_pesanan" />
</navigation>