<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/factory">

    <navigation
        android:id="@+id/factory"
        app:startDestination="@id/navigation_home">
        <fragment
            android:id="@+id/navigation_home"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
            <action
                android:id="@+id/action_navigation_home_to_laporanBulananFragment"
                app:destination="@id/laporanBulananFragment" />
        </fragment>
        <fragment
            android:id="@+id/navigation_pesanan"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.pesanan.PesananFragment"
            android:label="@string/title_pesanan"
            tools:layout="@layout/fragment_pesanan" >
            <action
                android:id="@+id/action_navigation_pesanan_to_detailPesananFragment"
                app:destination="@id/detailPesananFragment" />
        </fragment>
        <fragment
            android:id="@+id/detailPesananFragment"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.pesanan.DetailPesananFragment"
            android:label="fragment_detail_pesanan"
            tools:layout="@layout/fragment_detail_pesanan" />
        <fragment
            android:id="@+id/navigation_riwayat"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.riwayatRestok.RiwayatFragment"
            android:label="@string/title_riwayatStok"
            tools:layout="@layout/fragment_riwayat" />
        <fragment
            android:id="@+id/navigation_harga"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.hargaProduk.HargaProdukFragment"
            android:label="@string/title_harga"
            tools:layout="@layout/fragment_harga_produk" />
        <fragment
            android:id="@+id/navigation_pengaturan"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.pengaturan.PengaturanFragment"
            android:label="@string/title_pengaturan"
            tools:layout="@layout/fragment_pengaturan">
            <action
                android:id="@+id/action_navigation_pengaturan_to_rekeningFactoryFragment"
                app:destination="@id/rekeningFactoryFragment" />
            <action
                android:id="@+id/action_navigation_pengaturan_to_listDistributorFragment"
                app:destination="@id/listDistributorFragment" />
            <action
                android:id="@+id/action_navigation_pengaturan_to_addDistributorFragment"
                app:destination="@id/addDistributorFragment" />
        </fragment>
        <fragment
            android:id="@+id/rekeningFactoryFragment"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.pengaturan.RekeningFactoryFragment"
            android:label="fragment_rekening_factory"
            tools:layout="@layout/fragment_rekening_factory" />
        <fragment
            android:id="@+id/listDistributorFragment"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.pengaturan.ListDistributorFragment"
            android:label="fragment_list_distributor"
            tools:layout="@layout/fragment_list_distributor" />
        <fragment
            android:id="@+id/addDistributorFragment"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.pengaturan.AddDistributorFragment"
            android:label="fragment_add_distributor"
            tools:layout="@layout/fragment_add_distributor" />
        <fragment
            android:id="@+id/laporanBulananFragment"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.home.LaporanBulananFragment"
            android:label="fragment_laporan_bulanan"
            tools:layout="@layout/fragment_laporan_bulanan">
            <action
                android:id="@+id/action_laporanBulananFragment_to_detailLaporanFragment"
                app:destination="@id/detailLaporanFragment" />
        </fragment>
        <fragment
            android:id="@+id/detailLaporanFragment"
            android:name="com.polije.sosrobahufactoryapp.ui.factory.home.DetailLaporanFragment"
            android:label="DetailLaporanFragment" />
    </navigation>

</navigation>